<resources>
    <string name="app_name">My Application</string>
    <string name="editName">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whippedCream">WhippedCream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="number">0</string>
    <string name="summary">Order Summary</string>
    <string name="minus">-</string>
    <string name="addition">+</string>
    <string name="order">Order</string>
</resources>
